language/tools/move-unit-test/tests/test_sources/cross_module_aborts.exp
Running tests
[ FAIL    ] 0x1::B::failing_test
[ PASS    ] 0x1::M::dummy_test

Test failures:

Failures in 0x1::B:

┌── failing_test ──────
│ error: 
│ 
│    ┌── tests/test_sources/cross_module_aborts.move:5:9 ───
│    │
│  5 │         abort 0
│    │         ^^^^^^^ Test was not expected to abort but it aborted with 0 here
│    ·
│  4 │     public fun this_aborts() {
│    │                ----------- In this function in 0x1::M
│    │
│ 
│ 
└──────────────────

Test result: FAILED. Total tests: 2; passed: 1; failed: 1
